syntax = "proto3";

package model;

option java_package = "pl.piomin.services.grpc.customer.model";
option java_outer_classname = "CustomerProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service CustomersService {
  rpc FindAll(google.protobuf.Empty) returns (Customers) {}
  rpc AddCustomer(Customer) returns (Customer) {}
  rpc UpdateCustomer(Customer) returns (Customer) {}
  rpc DeleteCustomer(google.protobuf.StringValue) returns (Customer) {}
}

message Customer {
  int32 id = 1;
  string pesel = 2;
  string name = 3;
}

message Customers {
  repeated Customer customers = 1;
}